--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,153 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@300&display=swap');
+:root
+{
+    --main-color:#0aad0a;
+    --light-color:#f0f3f2;
+    --shadow: rgba(145,158,171,.2) 0px 2px 4px -1px,rgba(145,158,171,.14) 0px 4px 5px 0px,rgba(145,158,171,.12) 0px 1px 10px 0px;
+    --font-family:'Encode Sans Expanded', sans-serif;
+    --rating-color:#ffc908;
+}
+
+.img-contain{
+    width: fit-content;
+}
+i{
+    cursor: pointer;
+}
+.card{
+    transition: all .5s !important ;
+}
+.card:hover{
+    box-shadow: 1px 1px 10px #4fa74f !important;
+}
+
+.main-color{
+    color: var( --main-color);
+}
+
+body{
+    font-family: var(--font-family) !important;
+    overflow-x: hidden;
+}
+.rating-color
+{
+    color: var(--rating-color);
+}
+.cursor-pointer
+{
+    cursor: pointer;
+}
+a , a:hover{
+    color: black !important;
+    text-decoration: none;
+}
+.product:hover
+{
+    box-shadow: var(--shadow);
+    border: solid 1px var(--main-color);
+}
+.product{
+    transition: box-shadow 1s, border 1s;
+}
+.product .btn 
+{
+    transition: transform 1s , opacity 1s;
+    transform: translateY(100%);
+    opacity: 0;
+}
+.product:hover .btn 
+{
+    opacity: 1;
+    transform: translateY(0%);
+
+}
+.font-sm
+{
+    font-size: 14px;
+}
+.text-main
+{
+    color: var(--main-color);
+}
+.bg-main
+{
+    background-color: var(--main-color) !important;
+}
+.bg-main-light 
+{
+    background-color: var(--light-color) !important;
+}
+
+.green-color{
+    background-color: var(--main-color);
+}
+
+.btn.green-color:hover{
+    background-color: var(--main-color) !important;  
+}
+.btn:disabled{
+    background-color: var(--main-color) !important;   
+}
+
+.parent{
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
+aside{
+    width: 100%;
+    background-color: var( --light-color);
+    position: absolute;
+    top:0;
+    bottom: 0;
+    right:-100%;
+    z-index: 99999; 
+    overflow-y: auto;
+  }
+
+  span.cart{
+    width: 30px ;
+    height: 30px;
+    top:-10px;
+    left:25px;
+    background-color: var( --main-color);
+  }
+
+/* profile */
+
+
+.cursor-pointer{
+    cursor: pointer;
+  }
+  
+
+ 
+  .modal{
+    top:30%
+  }
+
+.loading{
+    position: fixed;
+    top:0;
+    left:0;
+    right:0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(240, 243, 242,.5);
+}
+
+.btn-brdr,.btn-brdr:hover{
+    border: 1px solid var( --main-color);
+}
+
+.slick-slide.slick-cloned {
+    display: none;
+  }
